# MAI_OS

./: .gitignore  .gitignore copy  CMakeLists.txt  Dockerfile  README.md  compose.yaml
includes/: os.h  thread.hpp
lab2_var18/: CMakeLists.txt  benchmark.py  plotting.py  task.c  task.cpp
laba_1_var3/: CMakeLists.txt  parent.c  task.c
laba_1_var3/includes/: os.h
laba_1_var3/os_wrapper/: os.c
os_wrapper/: CMakeLists.txt  os.c  threads_unix.cpp
